--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,7 +63,7 @@
           </div>
         </form>
        	<div style="text-align: center; padding-top: 50px">
-      		<h5>s'up</h5>
+      		<h5>pred</h5>
      	</div>
 
       </div>
