--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav style="background-color: #5e72e4" class="lighten-1"  role="navigation" style="height: 100px">
+  <nav style="background-color: #5e72e4" class="lighten-1" role="navigation" style="height: 100px">
     <div class="nav-wrapper container">
       <a id="logo-container" class="brand-logo center"><h5>SPOT THE DIFFERENCE</h5></a>
       <div style="margin-left: 800px">
@@ -19,39 +19,38 @@
     </div>
   </nav>
 
-
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <div class="row">
         <form action='/' method="post" class="col s12" enctype="multipart/form-data">
           <div class="row">
-          	<div class="input-field col s3">
+            <div class="input-field col s3">
             </div>
 
             <div class="input-field col s5" style="margin-left: 20px; margin-top: 100px">
-              <div class = "row">
-                  <label for="first_name"><b>Upload first Image</b></label><br>
-                  <div class = "file-field input-field">
-                    <div class = "btn" style="background-color: #5e72e4">
+              <div class="row">
+                  <label for="first_image"><b>Upload First Image</b></label><br>
+                  <div class="file-field input-field">
+                    <div class="btn" style="background-color: #5e72e4">
                       <span>Browse</span>
-                      <input type = "file" name="file_upload" id="file_upload" />
+                      <input type="file" name="file_upload" id="file_upload" />
                     </div>
-                    <div class = "file-path-wrapper">
-                      <input class = "file-path validate" type = "text" placeholder = "Upload file" name="file_name" id="file_name" />
+                    <div class="file-path-wrapper">
+                      <input class="file-path validate" type="text" placeholder="Upload file" name="file_name" id="file_name" />
                     </div>
                   </div>
               </div>
             </div>
             <div class="input-field col s5" style="margin-left: 20px; margin-top: 100px">
-              <div class = "row">
-                  <label for="first_name"><b>Upload Second Image</b></label><br>
-                  <div class = "file-field input-field">
-                    <div class = "btn" style="background-color: #5e72e4">
+              <div class="row">
+                  <label for="second_image"><b>Upload Second Image</b></label><br>
+                  <div class="file-field input-field">
+                    <div class="btn" style="background-color: #5e72e4">
                       <span>Browse</span>
-                      <input type = "file" name="file_upload2" id="file_upload2" />
+                      <input type="file" name="file_upload2" id="file_upload2" />
                     </div>
-                    <div class = "file-path-wrapper">
-                      <input class = "file-path validate" type = "text" placeholder = "Upload file" name="file_name2" id="file_name2" />
+                    <div class="file-path-wrapper">
+                      <input class="file-path validate" type="text" placeholder="Upload file" name="file_name2" id="file_name2" />
                     </div>
                   </div>
               </div>
@@ -71,20 +70,22 @@
     </div>
   </div>
 
-  </div>
-  </div>
-
   <!--  Scripts-->
   <script src="./static/js/materialize.js"></script>
   <script type="text/javascript">
     document.getElementById('file_upload').onchange = function () {
-      	document.getElementById('file_name').value = this.value.slice(12,100);
+      var fullPath = this.value;
+      var fileName = fullPath.split('\\').pop().split('/').pop();
+      document.getElementById('file_name').value = fileName;
     };
     document.getElementById('file_upload2').onchange = function () {
-        document.getElementById('file_name2').value = this.value.slice(12,100);
+      var fullPath = this.value;
+      var fileName = fullPath.split('\\').pop().split('/').pop();
+      document.getElementById('file_name2').value = fileName;
     };
   </script>
 
-  </body>
+</body>
 </html>
+
 
