--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -79,9 +79,9 @@
       document.getElementById('file_name').value = fileName;
     };
     document.getElementById('file_upload2').onchange = function () {
-      var fullPath = this.value;
-      var fileName = fullPath.split('\\').pop().split('/').pop();
-      document.getElementById('file_name2').value = fileName;
+      var fullPath2 = this.value;
+      var fileName2 = fullPath2.split('\\').pop().split('/').pop();
+      document.getElementById('file_name2').value = fileName2;
     };
   </script>
 
